# Aura-backend

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.cursor/rules/: README.md  coding-standards.mdc  cursor-optimization.mdc  execute.mdc  innovate.mdc  plan.mdc  project-structure.mdc  recording-rules.mdc  research.mdc  review.mdc  riper-5-basic.mdc  workflow.mdc
config/: env-development.yaml  env-local.yaml  env-production.yaml  env-staging.yaml
cursor-record/: development.md  technical_architecture_design.md
docs/product_design/: Aura产品需求文档.md
docs/technical/: _index.md  deployment_strategy.md  phase1_tech_design.md  system_architecture.md
scripts/: dev.sh  mock_algorithm_service.py  setup.sh
src/config/: env.py  loader.py  supabase.py
src/controllers/: chat.py  compatibility.py  fortune.py  onboarding.py
src/middleware/: auth.py  error_handler.py
src/routes/: __init__.py
src/scripts/: __init__.py  check_health.py  init_db.py  run_tests.py
src/services/: __init__.py  chat.py  compatibility.py  fortune.py  onboarding.py
src/types/: database.py
src/utils/: helpers.py
supabase/: config.toml
supabase/migrations/: 20250731152146_create_onboarding_tables.sql
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_basic_api.py
tests/integration/: test_onboarding.py
tests/services/: __init__.py  test_compatibility_service.py  test_fortune_service.py  test_onboarding_service.py
